src/app/layout/pages/main-layout/main-layout.component.scss
@import '../../../../styles/variables/fonts';
#main-layout-container {
	margin-top: 113px;
	padding-top: 20px;
}

@font-face {
	font-family: $secondary-font;
	src: url(/../../../../assets/font/raleway-v16-latin-regular.woff);
}

@font-face {
	font-family: $primary-font;
	src: url(/../../../../assets/font/open-sans-v17-latin-regular.woff);
}
#email-container {
	position: fixed;
	bottom: 224px;
}

